[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/inputproc.gd" type="Script" id=3]
[ext_resource path="res://assets/hud_vidas.png" type="Texture" id=4]
[ext_resource path="res://assets/font150.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/bomb100.png" type="Texture" id=6]

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 0, -2.27206 )
transform/scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Fruits" type="Node2D" parent="."]

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="InputProc" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="Inter" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Limit" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureFrame" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 11.0
margin/right = 321.0
margin/bottom = 327.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 156.0
margin/top = 16.0
margin/right = 495.0
margin/bottom = 146.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.639216, 0, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bomb1" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1159.0
margin/top = 18.0
margin/right = 1259.0
margin/bottom = 118.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomb2" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1059.0
margin/top = 18.0
margin/right = 1159.0
margin/bottom = 118.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomb3" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 954.0
margin/top = 18.0
margin/right = 1054.0
margin/bottom = 118.0
texture = ExtResource( 6 )
stretch_mode = 0

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="InputProc/Inter" to="InputProc" method="_on_Inter_timeout"]

[connection signal="timeout" from="InputProc/Limit" to="InputProc" method="_on_Limit_timeout"]


